  - Adjust the caret color to some light color.


Data copied from tables are now added to paste history.
  Note: Paste history can be accessed through ctrl+shift+v or ctrl+shift+insert.

Driver drop-down of the Add Alias dialog: Driver definitions with loaded (checked blue) drivers are now displayed on top of the drop-down.
  Thanks to Peter G. Horvath for the patch.


Bug fixes:

#1384 Look and feel Plugin: Tiny L&F causes NullPointerException in version 3.9.1 at application start.

Installer dialog: On first page of installer wizard the Data Import plugin was not mentioned to be a standard Plugin.

SQL Result: When row number where displayed, the functions "Mark duplicates values" and "Find column" raised exceptions.

#1383 Create data script from SQL fails with column alias
  The problem occurred for SQLs like
  "SELECT substring(number, 3, 9), id FROM contracts"
  Up to now only the first result column was checked for a column name.
  Now checking is continued for all result columns.
  If still no table name can be found the string "PressCtrlH" is placed where the table name is supposed to be.
  "PressCtrlH" is meant to remind that the editors replace function may be used to fix the script.


Small UI fix concerning caret color configuration.



3.9.1 (02/24/2018)
==================

Enhancements:

Squirrel can now be started by the "java -jar squirrel-sql.jar" command. Nonetheless the the existing starter scripts work as usual.
 Thanks to Peter G. Horvath for the merge request.

Small improvements of Data Import Plugin:
  - Icon
  - Several tooltips
  - CSV separator and date format are remembered

Brushed up the Data Import Plugin quite a bit and made it a standard Plugin.
  See Object tree --> right mouse menu of table --> menu item "Import file (MS Excel or CSV)"

New right mouse menu item on tables "Copy colored rows to new window",
  which copies all rows that were colored before to a new window.
