@@ -18,6 +18,8 @@ ImportFileDialog.trim.values=Trim values
 ImportFileDialog.trim.values.tooltip=Trims leading and trailing white spaces for alpha numeric import values
 
 ImportFileDialog.oneToOneMapping=One to one mapping
+ImportFileDialog.oneToOneMapping.tooltip=First column in CSV or Excel is mapped to first table column, second to second ...
+
 ImportFileDialog.safetySwitch=Error on long lines (>100000 characters)
 
 PreferencesPanel.truncateTable=Truncate table before inserting data
